# taskon

./: .gitignore  README.md  main.py  pyproject.toml
bot/: anticaptcha.py  chains.py  config.py  input.py  logger.py  paths.py  questions.py  utils.py
bot/scripts/: __init__.py  auth.py  bind.py  campaign.py  helpers.py  task.py  user.py
bot/taskon/: __init__.py  abi.py  account.py  api.py  contract.py  models.py  paths.py
bot/taskon/abi/: cap_minter.json
bot/taskon/scripts/: auth.py  bind.py  campaign.py  check_winners.py  helpers.py  mint.py  task.py
config/.default/: chains.toml  config.toml
